backends/user-service/deployments/lb-user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-user-service-service
  namespace: p2
spec:
  type: NodePort
  selector:
    app: lb
    service: user-service
  ports:
    - protocol: TCP
      port: 2006
      targetPort: 2006
