backends/user-service/deployments/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-user-service-service
spec:
  type: ClusterIP
  selector:
    app: lb
    service: user-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2006
